# Mini-GPT

./: README.md
prometheus/: README.md  pyproject.toml
prometheus/prometheus/: inference.py  model.py
